[package]
name = "itvoice-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enable-ansi-support = "0.1.2"
glob = "0.3.0"
indicatif = "0.17.2"
press-btn-continue = "0.1.1"
regex = "1.7.0"
tempfile = "3.3.0"
zip = "0.6.3"
